== Changelog

=== 3.7 (Planned to xx.06.2016)
* Added Marionette browser support
* Upgrade to Selenium 2.53.1
* (Planned) use BrowserMobProxy to download files

=== 3.6 (29.05.2016)
* upgrade to phantomjsdriver 1.3.0 (compatible with selenium-java 2.53.0)
* Add method `$.screenshotAsImage()`: `BufferedImage elementScreenshot = $(".logo").screenshotAsImage();` - thanks to @Akkuzin!
* #321 set default page load strategy back to "normal"
* fixed TestNG TextReport Listener, now only classes annotated with @Report will get reported - thanks to Alexei Vinogradov!
* #335 Add support for non-public page objects
* #329 Add support for JBrowser driver (but most of Selenide tests still fail with it :( )  - thanks to Anil Kumar Reddy Gaddam for pull request!
* #341 Use Selenide timeout when downloading files
* #320 Implementation of basic auth. for many browsers - thanks to @dimand58

=== 3.5.1 (Released 04.04.2016)
* #309 method $$.shouldHave(size()) should not fail when timeout happens after the 1st check

=== 3.5 (Released 31.03.2016)
* #274 added advanced checks for collection size: <, <=, >, >=, <>
* #308 set page load strategy to "none" by default
* #306 method $.toString() always includes latest value of "value" attribute
* Upgraded to selenium-java 2.53.0, changelog: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 3.4 (Released 03.03.2016)
* #297 Can set chrome switches with system property `-Dselenide.chrome.switches=--disable-popup-blocking`
* #296 Can set browser version with system property `-Dselenide.browser.version=8`
* #287 add pollingIntervalMilliseconds parameter to #waitUntil #waitWhile
* Typo in property name selenide.collectionsTimeout fixed
* Upgraded to selenium-java 2.52.0, changelog: http://selenium2.ru/news/170-selenium-252.html
* Upgraded to htmlunit 2.20, changelog: http://htmlunit.sourceforge.net/changes-report.html#a2.20

=== 3.3 (Released 10.02.2016)
* #277 Ajax support for collections: