@@ -3,13 +3,23 @@ package com.codeborne.selenide.impl;
 import org.openqa.selenium.StaleElementReferenceException;
 import org.openqa.selenium.WebElement;
 
+import java.util.logging.Logger;
+
 import static com.codeborne.selenide.Selenide.executeJavaScript;
+import static com.codeborne.selenide.WebDriverRunner.supportsJavascript;
 
 public class Events {
+  private static final Logger log = Logger.getLogger(Events.class.getName());
+  
   public static Events events = new Events();
   
   public void fireChangeEvent(WebElement element) {
-    fireEvent(element, "change");
+    if (supportsJavascript()) {
+      fireEvent(element, "change");
+    }
+    else {
+      log.fine("Cannot trigger change event: browser does not support javascript");
+    }
   }
 
   public void fireEvent(WebElement element, final String... event) {
